<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#fff"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ttt"
        android:transitionName="logo_image"
        tools:srcCompat="@drawable/ttt" />
    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_welcome_back"
        android:textSize="40sp"
        android:fontFamily="@font/bungee_shade"
        android:transitionName="logo_text"
        android:textColor="#000"
        android:layout_marginTop="-20dp"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_PhoneNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/googlebtn"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:text="Google SignIn"
            android:textSize="10sp"
            android:layout_weight="2"
            android:onClick="google"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="forget password"
            android:textColor="@color/purple_500" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="loginUser"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="@string/go"
            android:textColor="#fff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:onClick="SignUp"
            android:layout_margin="5dp"
            android:textColor="#000"/>

    </LinearLayout>

    </LinearLayout>





</ScrollView>