<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="#fece2f"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_person" />

            <TextView
                android:id="@+id/full_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/profile_image"
                android:fontFamily="@font/bungee"
                android:includeFontPadding="false"
                android:text="Ishank Gupta"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name_field"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/profile_image"
                android:includeFontPadding="false"
                android:text="ishank_gupta"
                android:textSize="14sp" />

            <Button
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:onClick="Reach"
                android:text="Back" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="185dp"
                android:layout_toRightOf="@id/imageButton"
                android:onClick="Logout"
                android:text="LOGOUT" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_baseline_sentiment_very_dissatisfied" />

                    <TextView
                        android:id="@+id/lost_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="15"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/lost_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lost_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/loses"
                        android:textSize="14sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="#fece2f"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_baseline_sentiment_satisfied_alt" />

                    <TextView
                        android:id="@+id/win_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="50"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/win_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/win_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/wins"
                        android:textSize="14sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/full_name_profile"
                android:layout_marginBottom="10dp"
                android:hint="@string/profilefull_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_person"
                    android:drawablePadding="10dp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_profile"
                android:layout_marginBottom="10dp"
                android:hint="@string/profilee_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email"
                    android:drawablePadding="10dp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_no_profile"
                android:layout_marginBottom="10dp"
                android:hint="@string/profilephone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_contact_phone"
                    android:drawablePadding="10dp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_profile"
                android:layout_marginBottom="10dp"
                android:hint="@string/profilepassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_security"
                    android:drawablePadding="10dp"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/black"
                android:fontFamily="@font/bungee"
                android:text="@string/update"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>